--- a/netology/index.html
+++ b/netology/index.html
@@ -39,6 +39,53 @@
     </header>
 
     <div class="wrapper">
+        <h2 class="trands-head">Сейчас в тренде</h2>
+        <div class="trands">
+            <div class="trand">
+                <div class="trand-box">
+                    <ul class="trand-tags">
+                        <li><a href="#0" class="trand-tag">Fashion</a></li>
+                        <li><a href="#0" class="trand-tag">MuSiC</a></li>
+                    </ul> 
+                    <div class="trand-theme">
+                        Сейчас в тренде: сад на подоконнике
+                    </div>
+                </div>
+            </div>
+            <div class="trand">
+                <div class="trand-box">
+                    <ul class="trand-tags">
+                        <li><a href="#0" class="trand-tag">Food</a></li>
+                    </ul> 
+                    <div class="trand-theme">
+                        сыры на красивых картинках из интернета: какие они на вкус?
+                    </div>
+                </div>
+            </div>
+            <div class="trand">
+                <div class="trand-box">
+                    <ul class="trand-tags">
+                        <li><a href="#0" class="trand-tag">Lifestyle</a></li>
+                        <li><a href="#0" class="trand-tag">Travel</a></li>
+                    </ul> 
+                    <div class="trand-theme">
+                        СОБИРАЕМСЯ В ПЕРВЫЙ ПОХОД В ГОРЫ
+                    </div>
+                </div>
+            </div>
+            <div class="trand">
+                <div class="trand-box">
+                    <ul class="trand-tags">
+                        <li><a href="#0" class="trand-tag">food</a></li>
+                        <li><a href="#0" class="trand-tag">Health</a></li>
+                    </ul> 
+                    <div class="trand-theme">
+                        Сейчас в тренде: сКОЛЬКО ВИТАМИНА c В ЛИМОНАХ?
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="container">
             <main>
                 <div class="articles">
@@ -107,7 +154,6 @@
                             </p>
                         </div>
                     </div>
-
                     <div class="article">
                         <div class="article-img">
                             <img src="img/last-post4.jpg"
@@ -133,50 +179,6 @@
                     <div class="article">
                         <div class="article-img">
                             <img src="img/last-post5.jpg"
-                                alt="alt текст">
-                        </div>
-                        <div class="article-content">
-                            <ul class="article-content-type">
-                                <li><a href="">lifestyle</a></li>
-                                <li><a href="">Food</a></li>
-                            </ul>
-                            <h2 class="article-content-theme">
-                                <a href="#0">Наукоёмкий подход к кулинарии</a>
-                            </h2>
-                            <div class="article-content-date">
-                                <time>10 июня 2019</time><span>Неизвестный автор</span>
-                            </div>
-                            <p class="article-content-text">
-                                Узнаем основы проектирования новых пищевых и около-пищевых опытов, вскроем физику, химию
-                                и микробиологию еды.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="article">
-                        <div class="article-img">
-                            <img src="img/last-post4.jpg"
-                                alt="alt текст">
-                        </div>
-                        <div class="article-content">
-                            <ul class="article-content-type">
-                                <li><a href="">lifestyle</a></li>
-                                <li><a href="">Food</a></li>
-                            </ul>
-                            <h2 class="article-content-theme">
-                                <a href="#0">Наукоёмкий подход к кулинарии</a>
-                            </h2>
-                            <div class="article-content-date">
-                                <time>10 июня 2019</time><span>Неизвестный автор</span>
-                            </div>
-                            <p class="article-content-text">
-                                Узнаем основы проектирования новых пищевых и около-пищевых опытов, вскроем физику, химию
-                                и микробиологию еды.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="article">
-                        <div class="article-img">
-                            <img src="img/last-post4.jpg"
                                 alt="alt текст">
                         </div>
                         <div class="article-content">
