--- a/netology/index.html
+++ b/netology/index.html
@@ -304,6 +304,69 @@
                 </div>
 
             </aside>
+            <h2 class="offers-head">Наши изделия</h2>
+            <div class="offers">
+                <div class="offer">
+                    <div class="offer-img">
+                        <img src="img/shop-item-desk1.jpg" alt="Подушки на диван">
+                    </div>                   
+                    <div class="offer-box">
+                        <div class="offer-name">
+                            Подушки на диван
+                        </div>
+                        <div class="offer-text">
+                            Набор из двух подушек с модными принтами. Видео о создании <a href="#">здесь</a>.
+                        </div>
+                        <div class="offer-footer">
+                            <div class="offer-footer-price">
+                                <div class="offer-footer-price-old">1000 ₽</div>
+                                <div class="offer-footer-price-new">800 ₽</div>
+                            </div>
+                            <div class="offer-footer-btn">В магазин</div>
+                        </div>                        
+                    </div>
+                </div> 
+                <div class="offer">
+                    <div class="offer-img">
+                        <img src="img/shop-item-desk2.jpg" alt="Кукла «Зайчик»">
+                    </div>                   
+                    <div class="offer-box">
+                        <div class="offer-name">
+                            Кукла «Зайчик»
+                        </div>
+                        <div class="offer-text">
+                            Интерьерная рукодельная кукла «Зайчик», созданию которой посвящена  <a href="#">весенняя серия</a> постов в блоге и несколько подкастов.
+                        </div>
+                        <div class="offer-footer">
+                            <div class="offer-footer-price">
+                                <div class="offer-footer-price-old"></div>
+                                <div class="offer-footer-price-new">3500 ₽</div>
+                            </div>
+                            <div class="offer-footer-btn">В магазин</div>
+                        </div>  
+                    </div>
+                </div> 
+                <div class="offer">
+                    <div class="offer-img">
+                        <img src="img/shop-item-desk3.jpg" alt="Шестиугольная рамка">
+                    </div>                   
+                    <div class="offer-box">
+                        <div class="offer-name">
+                            Шестиугольная рамка
+                        </div>
+                        <div class="offer-text">
+                            Необычная рамка для украшения дома из видео <a href="#">«Как сделать рамку из подручных средств за 30 минут» </a>
+                        </div>
+                        <div class="offer-footer">
+                            <div class="offer-footer-price">
+                                <div class="offer-footer-price-old">500 ₽</div>
+                                <div class="offer-footer-price-new">400 ₽</div>
+                            </div>
+                            <div class="offer-footer-btn">В магазин</div>
+                        </div>  
+                    </div>
+                </div>            
+            </div>
         </div>
     </div>
 
