--- a/netology/index.html
+++ b/netology/index.html
@@ -1,16 +1,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CodePen - html-62-final</title>
+    <title>Netology :: mq-37</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
 <body translate="no" class="vsc-initialized">
+   
+    <div class="overlay">
+        <div class="popup">
+            <div class="popup-x">X</div>
+            <h2 class="popup-head">Ваш фидбек</h2>
+        </div>
+    </div>
+   
+   
     <header class="welcome">
         <div class="container">
+            <div class="hamburger">
+                <div></div>
+                <div></div>
+                <div></div>                
+            </div>
             <div class="menu">
-                <a href="#0"><img src="svg/noemi-logo.svg"
-                        class="header-logo" alt=""></a>
+                <a href="#0"><img src="svg/noemi-logo.svg" class="header-logo" alt=""></a>
                 <nav>
                     <ul class="menu-list">
                         <li class="menu-list-item">
